# LexiMind

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dataset-metadata.json  debug_heads.py  debug_summarization.py  inspect_checkpoint.py  kaggle.json  pyproject.toml  reproduce_issue.py  requirements-demo.txt  requirements-dev.txt  requirements.txt  setup.py  start_training.bat
.github/workflows/: ci.yml
artifacts/: labels.json
artifacts/demo_data/: alice_in_wonderland.jsonl  dracula.jsonl  frankenstein.jsonl  great_gatsby.jsonl  library.json  moby_dick.jsonl  news_samples.jsonl  pride_and_prejudice.jsonl  sherlock_holmes.jsonl
configs/: config.yaml
configs/data/: datasets.yaml
configs/model/: base.yaml  large.yaml  small.yaml
configs/training/: default.yaml  dev.yaml  full.yaml  medium.yaml  quick_test.yaml
data/: catalog.json  discovery_dataset.jsonl
docs/: api.md  architecture.md  paper.tex  research_paper.tex  training.md
outputs/: evaluation_report.json  rouge_smoke.json  rouge_validation.json  training_history.json
scripts/: build_discovery_dataset.py  delete_hf_repo.py  demo_gradio.py  download_data.py  download_data.sh  eval_rouge.py  evaluate.py  export_model.py  export_tokenizer.py  inference.py  preprocess_data.py  process_books.py  profile_training.py  test_gpu.py  train.py  train_bert_baseline.py  train_multiseed.py  upload_model_to_hf.py  visualize_training.py
src/: __init__.py  download_datasets.py  preprocessing.py
src/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/api/inference/: __init__.py  inference.py
src/data/: __init__.py  dataloader.py  dataset.py  download.py  preprocessing.py  tokenization.py
src/inference/: __init__.py  baseline_summarizer.py  factory.py  generation.py  pipeline.py  postprocessing.py
src/models/: __init__.py  attention.py  decoder.py  encoder.py  factory.py  feedforward.py  heads.py  multitask.py  positional_encoding.py  t5_layer_norm.py
src/training/: __init__.py  callbacks.py  early_stopping.py  gradient_monitor.py  losses.py  metrics.py  nan_debugger.py  safe_compile.py  trainer.py  utils.py
src/ui/: streamlit_app.py
src/utils/: __init__.py  config.py  core.py  io.py  labels.py  logging.py  random.py
src/visualization/: __init__.py  attention.py  embeddings.py  metrics.py
tests/test_api/: test_routes.py
tests/test_data/: test_dataset.py  test_download_records.py  test_preprocessing.py  test_tokenization.py
tests/test_inference/: test_pipeline.py
tests/test_models/: test_attention.py  test_attention_visual.py  test_decoder.py  test_decoder_step.py  test_encoder.py  test_encoder_layer.py  test_feedforward.py  test_heads.py  test_multihead_visual.py  test_multitask.py  test_positional_encoding.py  test_visualizations.py
tests/test_training/: test_metrics.py  test_trainer.py
tests/test_utils/: test_config.py  test_io.py
