[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leximind"
version = "0.1.0"
description = "Multi-Task Transformer for Document Analysis"
authors = [{name = "Oliver Perrin", email = "oliver.t.perrin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}

dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "streamlit>=1.25.0",
    "plotly>=5.18.0",
    "transformers>=4.40.0",
    "fastapi>=0.110.0",
    "datasets>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"