[tool.poetry]
name = "leximind"
version = "0.1.0"
description = "Multi-Task Transformer for Document Analysis"
authors = ["Oliver Perrin <oliver.t.perrin@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"
transformers = ">=4.30.0"
datasets = ">=2.14.0"
tokenizers = ">=0.13.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
nltk = ">=3.8.0"
tqdm = ">=4.65.0"
pyyaml = ">=6.0"
omegaconf = ">=2.3.0"
tensorboard = ">=2.13.0"
gradio = ">=3.35.0"
requests = ">=2.31.0"
kaggle = ">=1.5.12"
streamlit = ">=1.25.0"
plotly = ">=5.18.0"
faiss-cpu = "1.9.0"
huggingface_hub = ">=0.19.0"
hydra-core = "^1.3.0"
bitsandbytes = ">=0.41.0"
accelerate = ">=0.21.0"
fastapi = ">=0.110.0"
mlflow = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.4.0"
mypy = "^1.4.0"
jupyter = "^1.0.0"
ipywidgets = "^8.0.0"
pre-commit = "^3.4.0"
rouge-score = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "nltk.*",
    "tqdm.*",
    "yaml.*",
    "omegaconf.*",
    "gradio.*",
    "requests.*",
    "kaggle.*",
    "streamlit.*",
    "plotly.*",
    "faiss.*",
    "huggingface_hub.*",
    "hydra.*",
    "bitsandbytes.*",
    "accelerate.*",
    "fastapi.*",
    "mlflow.*",
    "pydantic.*",
    "rouge_score.*"
]
ignore_missing_imports = true
follow_imports = "skip"